--- a/NaveenOgAteeb/assets/style/main1.css
+++ b/NaveenOgAteeb/assets/style/main1.css
@@ -82,8 +82,6 @@ body {
   flex-wrap: wrap;
 }
 
-
-
 .main {
   background-color: white;
   padding: 20px;
@@ -94,9 +92,9 @@ body {
 }
 .main img{
     display: block;
-      margin-left: auto;
-      margin-right: auto;
-      width: 25%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
 }
 
 .footer {
@@ -105,6 +103,7 @@ body {
   background: rgb(248, 245, 245);
 }
 .main-solution {
+    flex: 30%;
     background-color: #f1f1f1;
     padding: 20px;
   }
