--- a/NaveenOgAteeb/assets/style/responsive.css
+++ b/NaveenOgAteeb/assets/style/responsive.css
@@ -29,7 +29,7 @@
     }
     .main img{
         height: 100px;
-        
+        width: auto;
     }
   }
   @media screen and (max-width: 1250px){
