--- a/NaveenOgAteeb/assets/style/main1.css
+++ b/NaveenOgAteeb/assets/style/main1.css
@@ -102,7 +102,7 @@ body {
 .footer {
   padding: 20px;
   text-align: center;
-  background: rgb(248, 245, 245);
+  background: darkslategray;
 }
 .main-solution {
     flex: 30%;
