--- a/NaveenOgAteebOgMohamed/assets/style/main1.css
+++ b/NaveenOgAteebOgMohamed/assets/style/main1.css
@@ -80,8 +80,10 @@ body {
 .row {  
   display: flex;
   flex-wrap: wrap;
-  width: 100%;
-  justify-content: center;
+  width: 100%;         
+  flex-direction: column;     
+  justify-content: center;   
+  align-items: center;  
 }
 
 .main {
