--- a/NaveenOgAteeb/assets/style/responsive.css
+++ b/NaveenOgAteeb/assets/style/responsive.css
@@ -33,7 +33,7 @@
     }
     .main-solution img{
         width: auto;
-        height: 100px;
+        height: auto;
     }
   }
   @media screen and (max-width: 1250px){
