--- a/NaveenOgAteebOgMohamed/assets/style/responsive.css
+++ b/NaveenOgAteebOgMohamed/assets/style/responsive.css
@@ -41,3 +41,10 @@
         
     }
   }
+  @media screen and (max-width: 400px){
+    .header img{
+        top: 20px;
+        right: 0px;
+    }
+    
+   }
