--- a/NaveenOgAteeb/assets/style/main1.css
+++ b/NaveenOgAteeb/assets/style/main1.css
@@ -134,7 +134,7 @@ body {
     margin: 20px;
   }
   .foot-info a{
-    color: darkred;
+    color: rgb(243, 239, 239);
   }
   .foot-bot{
     text-align: center;
